--- a/src/index.css
+++ b/src/index.css
@@ -58,11 +58,25 @@ header img {
 
 main {
   padding: 1rem;
+  max-width: 32rem;
+  margin: 0 auto;
+  display: flex;
+  min-height: 60vh;
+  flex-direction: column;
+}
+
+.outer-searchbox {
+  flex: 1;
 }
 
 .guide {
   padding: 4rem 1rem;
   background-color: var(--gekas-light-blue);
+}
+
+.guide .inner {
+  max-width: 30rem;
+  margin: 0 auto;
 }
 
 .guide h2 {
@@ -164,6 +178,11 @@ div.auto-modal {
   background-color: white;
   padding: 1rem;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 0.5rem 1rem;
+}
+
+div.auto-modal .modal-inner {
+  max-width: 30rem;
+  margin: 0 auto;
 }
 
 div.auto-modal.show {
