--- a/src/index.css
+++ b/src/index.css
@@ -509,6 +509,17 @@ p.end {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 0.5rem 1rem;
 }
 
+@media only screen and (min-width: 600px) {
+  .guide-modal {
+    left: 50%;
+    margin-left: -16rem;
+    top: 1rem;
+    right: auto;
+    max-width: 32rem;
+    min-width: 32rem;
+  }
+}
+
 .guide-modal.show {
   transform: translateY(0%);
 }
