--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ main {
   max-width: 32rem;
   margin: 0 auto;
   display: flex;
-  min-height: 60vh;
+  min-height: 45vh;
   flex-direction: column;
 }
 
@@ -216,7 +216,7 @@ div.auto-modal.show {
 
 div.auto-modal h3 {
   height: 1.5rem;
-  margin: 0 0 1rem;
+  margin: 1rem 0 0;
 }
 
 div.auto-modal p {
@@ -251,25 +251,27 @@ button.close-btn img {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  border-bottom: 2px solid var(--border-color);
+  border: 2px solid var(--border-color);
+  padding: 0 0.5rem;
+  margin-top: 1.5rem;
 }
 
 .search-wrapper img {
   display: block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.75rem;
+  height: 1.75rem;
   margin-right: 0.5rem;
 }
 
 .search-wrapper:focus-within {
   display: flex;
-  border-bottom: 2px solid var(--gekas-blue);
+  border: 2px solid var(--gekas-blue);
 }
 
 .auto-complete-input {
   width: 100%;
   padding: 1rem 0;
-  font-size: 1rem;
+  font-size: 1.15rem;
   border: 0;
   flex: 1;
   outline: 0;
@@ -735,8 +737,18 @@ p.end {
   color: var(--gekas-blue);
   text-decoration: underline;
   border: none;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-family: "Open Sans", sans-serif;
+}
+
+.link-button.new-start {
+  position: relative;
+  top: -1rem;
+}
+
+.new-start-point {
+  text-align: right;
+  padding-bottom: 2rem;
 }
 
 .lower-row-warehouse {
