--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,12 @@ main {
   flex-direction: column;
 }
 
+@media only screen and (min-width: 600px) {
+  main {
+    min-height: 60vh;
+  }
+}
+
 .outer-searchbox {
   flex: 1;
 }
